# DiskPine

./: .gitignore  Cargo.toml  README.md  tape.trace.bak
.git.bfg-report/2024-03-27/15-11-17/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
src/: block.rs  error.rs  lib.rs  log.rs  main.rs  utils.rs
src/commands/: generate_tape_trace.rs  generate_trace.rs  mod.rs  origin_to_sim.rs  today.rs  trace_foot_size.rs
tests/: test.csv  test.trace  test_origin_to_sim.rs
