[package]
authors = ["Cherry <baominyang22@mails.ucas.ac.cn>"]
name = "diskpine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 随机数生成
rand = "*"

# rand crate 中 distributions 模块的超集
rand_distr = "0.4.3"

# 命令行解析
clap = { version = "4.4.7", features = ["derive"] }

# 错误处理
thiserror = "1.0"

# 正则表达式匹配
regex = "1.10.2"

# 日志
log = "0.4.20"

# 从 .env 文件中解析环境变量
dotenv = "0.15.0"

chrono = "0.4.34"